--- a/app/assets/stylesheets/orders/index.css
+++ b/app/assets/stylesheets/orders/index.css
@@ -1,4 +1,6 @@
 /* お買い物リスト一覧 */
+
+/* お買い物リスト外枠 */
 .order__content{
   width: calc(100% / 3 - 20px);
   margin: 10px;
@@ -7,6 +9,7 @@
   background-color: rgb(218, 247, 218);
 }
 
+/* お買い物リスト内側 */
 .order__category, .order__priority, .order__memo{
   margin-top: 5px;
 }
@@ -29,7 +32,7 @@
   font-family: 'BIZ UDPGothic', sans-serif;
   text-decoration: none;
   color: black;
-  font-size: 11px;
+  font-size: 10px;
   background-color: skyblue;
   padding: 5px 10px;
   border-radius: 5px;
@@ -40,6 +43,7 @@
   background-color: red;
 }
 
+/* お買い物完了ボタン */
 .order__checked{
   display: flex;
   justify-content: center;
