グループ機能のcss設定

--- a/app/assets/stylesheets/groups/add_member.css
+++ b/app/assets/stylesheets/groups/add_member.css
@@ -41,3 +41,29 @@
   border-radius: 5px;
   border: solid;
 }
+
+/* スマホ表示 */
+@media (max-width: 599px) {
+
+  /* メンバーリスト表示ページ */
+
+  /* メンバーリスト表示フォーム外枠 */
+  .add-members__form{
+    padding: 15px;
+  }
+
+  /* メンバーリスト表示フォーム内部 */
+  .add-members__title{
+    font-size: 16px;
+  }
+
+  .add-members__name{
+    font-size: 14px;
+    margin-top: 10px;
+  }
+
+  .add-members__btn, .add-members__return-btn{
+    font-size: 13px;
+  }
+
+}
