--- a/app/assets/stylesheets/groups/index.css
+++ b/app/assets/stylesheets/groups/index.css
@@ -4,3 +4,13 @@
   color: darkslateblue;
   font-family: 'BIZ UDPGothic', sans-serif;
 }
+
+/* スマホ表示 */
+@media (max-width: 599px) {
+
+  /* TOPページメインテキスト */
+  .group-wrapper__main-text{
+    font-size: 13px;
+  }
+
+}
