--- a/app/assets/stylesheets/items/new.css
+++ b/app/assets/stylesheets/items/new.css
@@ -40,3 +40,22 @@
   border-radius: 5px;
   border: solid;
 }
+
+/* スマホ表示時 */
+@media (max-width: 599px) {
+  
+  /* 登録フォーム内側 */
+  .new-item__title{
+    font-size: 16px;
+  }
+
+  .new-item__field{
+    font-size: 14px;
+    margin-bottom: 15px;
+  }
+
+  .new-item__btn{
+    font-size: 13px;
+  }
+
+}
