--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -39,7 +39,7 @@
                 <% else %>
                   <%= image_tag 'noimage.jpg', :size => '240x180', class: 'edit-order__image' %>
                 <% end %>
-                <p class="edit-order__input">
+                <p class="edit-order__explain">
                   ※カテゴリ/画像は、在庫リストのデータを修正してください
                 </p>
               </div>
