グループ作成画面のcssを調整

--- a/app/assets/stylesheets/users/search_results.css
+++ b/app/assets/stylesheets/users/search_results.css
@@ -34,7 +34,7 @@
 .search-results__return-btn{
   text-decoration: none;
   color: black;  
-  border: solid;
+  border: 1px solid;
 }
 
 /* スマホ表示時 */
