在庫リストページのcss調整

--- a/app/assets/stylesheets/items/edit.css
+++ b/app/assets/stylesheets/items/edit.css
@@ -26,7 +26,7 @@
   background-color: skyblue;
   padding: 5px 10px;
   border-radius: 5px;
-  border: solid;
+  border: 1px solid;
 }
 
 .edit-item__delete-btn{
