--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -29,7 +29,7 @@
               </div>
               
               <div class="edit-order__field">
-                <%= f.label '在庫メモ' %>
+                <%= f.label 'メモ' %>
                 <%= f.text_field :memo, class:"memo", placeholder:"メモを入力", class:"edit-order__input" %>
               </div>
 
