--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -29,7 +29,7 @@
               </div>
 
               <div class="new-order__field">
-                <%= f.label 'お買い物メモ（任意）'%>
+                <%= f.label 'メモ（任意）'%>
                 <%= f.text_field :memo, class:"memo", placeholder:"(例)お母さん用", class:"new-order__input" %>
               </div>
 
