--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -22,7 +22,7 @@
                       <%= check_box_tag "order_ids[]", order.id %></li>
                   <li class="order__category">カテゴリ：<%= order.item.category.name %></li>
                   <li class="order__priority">優先度：<%= order.priority.name %></li>
-                  <li class="order__memo">お買い物メモ：<%= order.memo %></li>
+                  <li class="order__memo">メモ：<%= order.memo %></li>
                   <% if order.item.image.attached? %>
                     <li><%= image_tag order.item.image.variant(resize: '240x180'), class: 'order__image' %></li>
                   <% else %>
@@ -42,7 +42,7 @@
                       <%= check_box_tag "purchase_ids[]", purchase.id %></li>
                   <li class="order__category">カテゴリ：<%= purchase.category.name %></li>
                   <li class="order__priority">優先度：<%= purchase.priority.name %></li>
-                  <li class="order__memo">お買い物メモ：<%= purchase.memo %></li>
+                  <li class="order__memo">メモ：<%= purchase.memo %></li>
                   <% if purchase.image.present? %>
                     <li><%= image_tag purchase.image.variant(resize: '240x180'), class: 'order__image' %></li>
                   <% else %>
