--- a/app/views/purchases/_form.html.erb
+++ b/app/views/purchases/_form.html.erb
@@ -9,7 +9,7 @@
 </div>
 
 <div class="new-order__field">
-  <%= f.label '（どちらか必須）在庫メモまたは画像' %>
+  <%= f.label '（どちらか必須）メモまたは画像' %>
   <%= f.text_field :memo, class:"memo", placeholder:"メモを入力", class:"new-order__input" %>
     <%= f.file_field :image, class:"new-order__input" %>
 </div>
