在庫機能のcss調整（お買い物機能のcss調整と合わせる）

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -19,7 +19,7 @@
             <div class="item__content">
               <ul class="item__detail">
                 <li class="item__category">カテゴリ：<%= item.category.name %></li>
-                <li class="item__memo">在庫メモ：<%= item.memo %></li>
+                <li class="item__memo">メモ：<%= item.memo %></li>
               <% if item.image.attached? %>
                 <li><%= image_tag item.image.variant(resize: '240x180'), class:'item__image' %></li>
               <% else %>
