--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <div class="new-item__field">
-  <%= f.label '（どちらか必須）在庫メモまたは画像' %>
+  <%= f.label '（どちらか必須）メモまたは画像' %>
   <%= f.text_field :memo, class:"memo", placeholder:"メモを入力", class:"new-item__input" %>
     <%= f.file_field :image, class:"new-item__input" %>
 </div>
