--- a/app/views/groups/calculate_unit_price.html.erb
+++ b/app/views/groups/calculate_unit_price.html.erb
@@ -15,7 +15,7 @@
         <div class="calculate-section">
           <div class="calculate-unit-price">
             <div class="calculate-title">
-              商品の単価を同時に比較できます（５つまで）
+              商品の単価を比較できます
             </div>
             <% 5.times do |index| %>
               <div class="calculate-box">
@@ -28,7 +28,7 @@
                     <input type="number" id="price<%= idx %>" name="price<%= idx %>" autofocus="true" >円
                   </div>
                   <div class="calculate-box__field">
-                    <label for="unit<%= idx %>">個数（重さ・枚数）</label>
+                    <label for="unit<%= idx %>">数量</label>
                     <input type="number" id="unit<%= idx %>" name="unit<%= idx %>">
                   </div>
                   <div class="calculate-box__field">
