--- a/app/assets/stylesheets/groups/new.css
+++ b/app/assets/stylesheets/groups/new.css
@@ -49,7 +49,7 @@
   background-color: skyblue;
   padding: 5px 10px;
   border-radius: 5px;
-  border: 1px solid;
+  border: solid;
 }
 
 /* スマホ表示 */
@@ -78,6 +78,7 @@
   .create-group__btn, .create-group__return-btn{
     font-size: 13px;
     padding: 5px;
+    border: 1px solid;
   }
 
 }
