--- a/app/assets/stylesheets/items/edit.css
+++ b/app/assets/stylesheets/items/edit.css
@@ -26,7 +26,7 @@
   background-color: skyblue;
   padding: 5px 10px;
   border-radius: 5px;
-  border: 1px solid;
+  border: solid;
 }
 
 .edit-item__delete-btn{
@@ -49,6 +49,7 @@
 
   .edit-item__btn, .edit-item__delete-btn{
     font-size: 13px;
+    border: 1px solid;
   }
 
 }
