--- a/app/assets/stylesheets/items/new.css
+++ b/app/assets/stylesheets/items/new.css
@@ -38,7 +38,7 @@
   background-color: skyblue;
   padding: 5px 10px;
   border-radius: 5px;
-  border: 1px solid;
+  border: solid;
 }
 
 /* スマホ表示時 */
@@ -56,6 +56,7 @@
 
   .new-item__btn{
     font-size: 10px;
+    border: 1px solid;
   }
 
 }
