--- a/app/assets/stylesheets/shared/order.css
+++ b/app/assets/stylesheets/shared/order.css
@@ -54,9 +54,10 @@
 .new-order__wrapper{
   min-height: calc(100vh - 40px - 20px - 30px - 30px);
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
+  overflow: auto;
+  padding: 20px 0;
 }
 
 /* アイテム数が2つのときに左寄せにする設定 */
