--- a/app/assets/stylesheets/orders/edit.css
+++ b/app/assets/stylesheets/orders/edit.css
@@ -3,7 +3,8 @@
   height: calc(100vh - 40px - 20px - 30px - 30px);
   display: flex;
   justify-content: center;
-  align-items: center;
+  overflow: auto;
+  padding: 20px 0;
 }
 
 /* 編集フォーム外枠 */
